--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -15,11 +15,10 @@ body {
 }
 
 
-
 /* --------------------------
-Hero Image / Title Styles 
+company Image / Title Styles 
 ----------------------------- */
-#hero-image {
+#company-image {
 	height: 350px;
 	width: 100%;
 	background-color: #444;
@@ -30,7 +29,7 @@ Hero Image / Title Styles
 	position: relative;
 }
 
-#hero-image::before {
+#compan-image::before {
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -40,7 +39,7 @@ Hero Image / Title Styles
 	content: "";
 }
 
-#hero-image #hero-title {
+#company-image #company-title {
 	position: absolute;
 	background-color: #fff;
 	padding: 25px 60px;
@@ -182,9 +181,9 @@ Media Queries / Responsive Styles
 
 }
 
-/* Increase width of the hero-title element on Movie-single pages to prevent text from stacking */
+/* Increase width of the company-title element on Movie-single pages to prevent text from stacking */
 @media (max-width: 1099px) {
-	#hero-image-single #hero-title {
+	#company-image-single #company-title {
 		font-size: 1.05em;
 		text-align: center;
 		width: 60%;
@@ -193,15 +192,15 @@ Media Queries / Responsive Styles
 	}
 }
 @media (max-width: 767px) {
-	#hero-image-single #hero-title, #hero-image-notFound #hero-title {
+	#company-image-single #company-title, #company-image-notFound #company-title {
 		width: 75%;
 	}	
 }
 
 
-/* Increase width of the hero-title element on home page to prevent text from stacking */
+/* Increase width of the company-title element on home page to prevent text from stacking */
 @media (max-width: 767px) {
-	#hero-image #hero-title {
+	#company-image #company-title {
 		font-size: 1.05em;
 		text-align: center;
 		width: 50%;
@@ -210,7 +209,7 @@ Media Queries / Responsive Styles
 	}
 }
 @media (max-width: 500px) {
-	#hero-image #hero-title  {
+	#company-image #company-title  {
 		width: 65%;
 	}	
 }
@@ -241,17 +240,17 @@ Media Queries / Responsive Styles
 	}
 }
 
-/* Decrease the height of the hero images on mobile devices */
+/* Decrease the height of the company images on mobile devices */
 @media (max-width: 767px) {
-	#hero-image, #hero-image-single, #hero-image-notFound {
+	#company-image, #company-image-single, #company-image-notFound {
 		height: 400px;
 	}
 }
 
-/* Increase the width of the hero title on very small devices */
+/* Increase the width of the company title on very small devices */
 @media(max-width: 400px) {
-	#hero-image-single #hero-title, #hero-image-notFound #hero-title,
-	#hero-image #hero-title {
+	#company-image-single #company-title, #company-image-notFound #company-title,
+	#company-image #company-title {
 		width: 90%;
 		font-size: 0.95em;
 	}
@@ -269,7 +268,7 @@ Page Not Found Template Styles
 
 -------------------------------- */
 
-#hero-image-notFound {
+#company-image-notFound {
 	height: 550px;
 	width: 100%;
 	background-color: #444;
@@ -280,7 +279,7 @@ Page Not Found Template Styles
 	position: relative;
 }
 
-#hero-image-notFound::before {
+#company-image-notFound::before {
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -290,7 +289,7 @@ Page Not Found Template Styles
 	content: "";
 }
 
-#hero-image-notFound #hero-title {
+#company-image-notFound #company-title {
 	position: absolute;
 	background-color: #fff;
 	padding: 25px 60px;
