--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -9,6 +9,18 @@ body {
 	
 }
 
+body a {
+    color: black;
+	text-decoration: none;
+	text-align: center;
+}
+
+body a:hover {
+	color: hotpink;
+    text-decoration: none;
+}
+
+
 .content-padding {
 	padding-left: 11%;
 	padding-right: 11%;
