--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -20,7 +20,6 @@ body a:hover {
     text-decoration: none;
 }
 
-
 .content-padding {
 	padding-left: 11%;
 	padding-right: 11%;
@@ -54,7 +53,7 @@ company Image / Title Styles
 #company-image #company-title {
 	position: absolute;
 	background-color: #fff;
-	padding: 25px 60px;
+	padding: 15px 40px;
 	left: 50%;
 	-webkit-transform: translateX(-50%);
 	-moz-transform: translateX(-50%);
@@ -66,7 +65,7 @@ company Image / Title Styles
   margin: 0px;
   text-transform: uppercase;
   font-weight: 400;
-  font-size: 1.20em;
+  font-size: 30px;
   letter-spacing: 0.4px;
 }
 
@@ -77,7 +76,7 @@ Home Page Posters Styles
 -------------------------------- */
 
 #posters-wrapper {
-	padding-top: 75px;
+	padding-top: 15px;
 }
 .poster {
 	width: 30%;
