--- a/views/product.ejs
+++ b/views/product.ejs
@@ -3,7 +3,9 @@
 <h2><%= product.title %></h2>
 <hr>
 <div class="poster-wrapper">
-<p><img src="/images/<%= product.picture %>"</p>
+<div class="poster">
+<p><img src="/images/<%= product.picture %>"width="300" height="300"></p>
+</div>
 </div>
 <p><%= product.description %></p>
 <ul>
@@ -13,3 +15,4 @@
 </ul>
 
 <% include footer.ejs %>
+
