poster size change

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -4,7 +4,7 @@
 <hr>
 <div class="poster-wrapper">
 <div class="poster">
-<p><img src="/images/<%= product.picture %>"width="300" height="300"></p>
+<p><img src="/images/<%= product.picture %>"></p>
 </div>
 </div>
 <p><%= product.description %></p>
